@@ -20,6 +20,7 @@ import org.apache.kafka.connect.errors.DataException;
 import org.apache.kafka.connect.errors.SchemaBuilderException;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -184,7 +185,7 @@ public class SchemaBuilder implements Schema {
 
     @Override
     public Map<String, String> parameters() {
-        return parameters == null ? null : Map.copyOf(parameters);
+        return parameters == null ? null : Collections.unmodifiableMap(parameters);
     }
 
     /**
